--- a/src/main/java/com/shoptao/view/KhachHangPanel.form
+++ b/src/main/java/com/shoptao/view/KhachHangPanel.form
@@ -508,7 +508,7 @@
         </Container>
         <Component class="com.toedter.calendar.JDateChooser" name="jdcNgaySinh">
           <Properties>
-            <Property name="dateFormatString" type="java.lang.String" value="dd, MM, yyyy"/>
+            <Property name="dateFormatString" type="java.lang.String" value="dd-MM-yyyy"/>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="24" style="0"/>
             </Property>
