--- a/src/main/java/com/shoptao/view/HoaDonReport_1.jrxml
+++ b/src/main/java/com/shoptao/view/HoaDonReport_1.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="26303fbe-14e8-4700-bd62-355649d18511">
 	<property name="ireport.zoom" value="1.7715610000000026"/>
-	<property name="ireport.x" value="136"/>
-	<property name="ireport.y" value="163"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="69"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -76,37 +76,37 @@ FROM
      HoaDon."tienkhachdua" AS HoaDon_tienkhachdua,
      HoaDonChiTiet."soluong" AS HoaDonChiTiet_soluong,
      HoaDonChiTiet."dongia" AS HoaDonChiTiet_dongia,
-     KhachHang."hoten" AS KhachHang_hoten,
-     KhachHang."sdt" AS KhachHang_sdt,
-     KhachHang."diachi" AS KhachHang_diachi,
-     NhanVien."hoten" AS NhanVien_hoten,
+     SanPham."ma" AS SanPham_ma,
      SanPham."ten" AS SanPham_ten,
      SanPham."dungluong" AS SanPham_dungluong,
-     SanPham."iddongsanpham" AS SanPham_iddongsanpham,
-     SanPham."idmausac" AS SanPham_idmausac,
-     MauSac."ten" AS MauSac_ten
+     MauSac."ten" AS MauSac_ten,
+     NhanVien."hoten" AS NhanVien_hoten,
+     KhachHang."hoten" AS KhachHang_hoten,
+     KhachHang."sdt" AS KhachHang_sdt,
+     KhachHang."diachi" AS KhachHang_diachi
 FROM
-     "HoaDon" HoaDon INNER JOIN "dbo"."HoaDon" HoaDonChiTiet ON HoaDon."id" = HoaDonChiTiet."idhoadon"
-     INNER JOIN "full" KhachHang ON HoaDon."idkhachhang" = KhachHang."id"
-     INNER JOIN "full" NhanVien ON HoaDon."idnhanvien" = NhanVien."id"
-     INNER JOIN "full" SanPham ON HoaDonChiTiet."idsanpham" = SanPham."id"
-     INNER JOIN "full" MauSac ON SanPham."idmausac" = MauSac."id"
+     "dbo"."HoaDon" HoaDon INNER JOIN "dbo"."HoaDonChiTiet" HoaDonChiTiet ON HoaDon."id" = HoaDonChiTiet."idhoadon"
+     INNER JOIN "dbo"."SanPham" SanPham ON HoaDonChiTiet."idsanpham" = SanPham."id"
+     INNER JOIN "dbo"."MauSac" MauSac ON SanPham."idmausac" = MauSac."id"
+     INNER JOIN "dbo"."NhanVien" NhanVien ON HoaDon."idnhanvien" = NhanVien."id"
+     INNER JOIN "dbo"."KhachHang" KhachHang ON HoaDon."idkhachhang" = KhachHang."id"
 WHERE
      HoaDon."ma" = $P{mahoadon}]]>
 	</queryString>
 	<field name="HoaDon_ma" class="java.lang.String"/>
 	<field name="HoaDon_ngaytao" class="java.sql.Date"/>
+	<field name="HoaDon_tongtien" class="java.math.BigDecimal"/>
+	<field name="HoaDon_tienkhachdua" class="java.math.BigDecimal"/>
 	<field name="HoaDonChiTiet_soluong" class="java.lang.Integer"/>
 	<field name="HoaDonChiTiet_dongia" class="java.math.BigDecimal"/>
+	<field name="SanPham_ma" class="java.lang.String"/>
+	<field name="SanPham_ten" class="java.lang.String"/>
+	<field name="SanPham_dungluong" class="java.lang.String"/>
+	<field name="MauSac_ten" class="java.lang.String"/>
+	<field name="NhanVien_hoten" class="java.lang.String"/>
 	<field name="KhachHang_hoten" class="java.lang.String"/>
 	<field name="KhachHang_sdt" class="java.lang.String"/>
 	<field name="KhachHang_diachi" class="java.lang.String"/>
-	<field name="NhanVien_hoten" class="java.lang.String"/>
-	<field name="SanPham_ten" class="java.lang.String"/>
-	<field name="SanPham_dungluong" class="java.lang.String"/>
-	<field name="SanPham_iddongsanpham" class="java.lang.String"/>
-	<field name="SanPham_idmausac" class="java.lang.String"/>
-	<field name="MauSac_ten" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -236,7 +236,7 @@ WHERE
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="39" splitType="Stretch">
+		<band height="38" splitType="Stretch">
 			<line>
 				<reportElement x="0" y="25" width="555" height="1" uuid="346ec231-aea4-44d9-847e-475f0bc95472"/>
 			</line>
@@ -280,14 +280,7 @@ WHERE
 				<text><![CDATA[Tổng tiền]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="310" y="20" width="100" height="20" uuid="5fe8a7c8-3a22-408e-9762-97f2e7b57d71"/>
-				<textElement>
-					<font fontName="DejaVu Sans" size="14"/>
-				</textElement>
-				<text><![CDATA[Tiền thanh toán]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="310" y="40" width="100" height="20" uuid="5516be96-e038-4011-93e4-96440ebb0987"/>
+				<reportElement x="310" y="30" width="100" height="20" uuid="5516be96-e038-4011-93e4-96440ebb0987"/>
 				<textElement>
 					<font fontName="DejaVu Sans" size="14"/>
 				</textElement>
@@ -301,32 +294,25 @@ WHERE
 				<text><![CDATA[Tiền thừa]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="410" y="0" width="100" height="20" uuid="69c1f5cc-45ad-4409-8291-d7cf5581a866"/>
+				<reportElement x="423" y="0" width="100" height="20" uuid="69c1f5cc-45ad-4409-8291-d7cf5581a866"/>
 				<textElement>
 					<font fontName="DejaVu Sans" size="14"/>
 				</textElement>
-				<textFieldExpression><![CDATA[new DecimalFormat("###,###,###").format($F{HoaDon_tongtien})]]></textFieldExpression>
+				<textFieldExpression><![CDATA[new DecimalFormat("###,###,###").format($F{HoaDon_tongtien}.doubleValue()).toString() + "VND"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="410" y="40" width="100" height="20" uuid="421301a1-c34c-4057-9477-68fccb337aa9"/>
+				<reportElement x="423" y="30" width="100" height="20" uuid="5d798d2d-ad13-4f08-9027-776ac4dc961a"/>
 				<textElement>
 					<font fontName="DejaVu Sans" size="14"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{field}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[new DecimalFormat("###,###,###").format($F{HoaDon_tienkhachdua}.doubleValue()).toString() + "VND"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="410" y="20" width="100" height="20" uuid="0996e469-67ff-40b1-bfaa-e54bcd26323d"/>
+				<reportElement x="423" y="60" width="100" height="20" uuid="0a935a58-de20-4e2e-a1bf-5b195ac9f3d3"/>
 				<textElement>
 					<font fontName="DejaVu Sans" size="14"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{field}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="410" y="60" width="100" height="20" uuid="36e2cbc4-7947-4ff0-af54-76b32ee9000e"/>
-				<textElement>
-					<font fontName="DejaVu Sans" size="14"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{field}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[new DecimalFormat("###,###,###").format(($F{HoaDon_tienkhachdua}.subtract($F{HoaDon_tongtien})).doubleValue()).toString() + "VND"]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnFooter>
